# MangoHudPy

./: .gitignore  DEVELOPMENT.md  README.md  dev-setup.sh  main.py  pyproject.toml  upload-to-pypi.sh
.github/workflows/: ci.yml
docs/: platform-notes.md
docs/superpowers/specs/: 2026-03-22-graph-feature-parity-design.md
mangohudpy/: __init__.py  bundle.py  cli.py  config.py  constants.py  desktop.py  graph.py  launch.py  organize.py  profile.py  summary.py  test_cmd.py  upload.py  utils.py
mangohudpy/gui/: __init__.py  app.py  main_window.py  widgets.py  worker.py
mangohudpy/gui/pages/: config.py  dashboard.py  graphs.py  launch_option.py  organize.py  profile.py  summary.py  test_page.py  upload.py
tests/gui/: test_app.py  test_config.py  test_dashboard.py  test_main_window.py  test_summary.py  test_widgets.py  test_worker.py
