[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mangohudpy"
version = "1.1.8"
description = "MangoHud Performance Profiler for Bazzite / SteamOS"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["vdf", "websocket-client"]

[project.optional-dependencies]
graphs = ["matplotlib"]
gui = ["PySide6>=6.6"]

[project.scripts]
mangohud-py = "mangohudpy.cli:main"
mangohud-py-gui = "mangohudpy.gui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mangohudpy*"]

[tool.setuptools.package-data]
mangohudpy = ["data/*"]
