[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mangohudpy"
version = "1.3.5"
description = "MangoHud Performance Profiler for Bazzite / SteamOS"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = ["vdf", "websocket-client"]

[project.urls]
Source = "https://github.com/mdeguzis/MangoHudPy"
"Bug Tracker" = "https://github.com/mdeguzis/MangoHudPy/issues"

[project.optional-dependencies]
graphs = ["matplotlib"]
gui = ["PySide6>=6.6"]

[project.scripts]
mangohud-py = "mangohudpy.cli:main"
mangohud-py-gui = "mangohudpy.gui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mangohudpy*"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.setuptools.package-data]
mangohudpy = ["data/*"]
